--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.1.6"
   }
 }
